samples/_failures_safe/1761443787_75162b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa966714.c: In function ‘main’:
./samples/SAFE/__tmp_fa966714.c:163:16: error: expected ‘;’ at end of input
  163 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_fa966714.c:163:9: error: expected declaration or statement at end of input
  163 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_fa966714.c:163:9: error: expected declaration or statement at end of input
